tree-sitter-rgbasm/test/corpus/blocks.txt
================================================================================
Blocks: if/rept/for/macro
================================================================================

; If / elif / else
IF 1
    ld a, 1
ELIF 0
    ld a, 2
ELSE
    ld a, 3
ENDC

; Nested REPT and FOR
REPT 2
    FOR i, 0, 3
        db i
    ENDR
ENDR

; Simple macro
MACRO MYMACRO
    ld a, arg
ENDM

---

(source_file
  (inline_comment)
  (directive
    (if_block
      (if_keyword)
      (number_literal)
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (register)
            (number_literal))))
      (elif_clause
        (elif_keyword)
        (number_literal)
        (instruction_list
          (instruction
            (instruction_name)
            (operand_list
              (register)
              (number_literal)))))
      (else_clause
        (else_keyword)
        (instruction_list
          (instruction
            (instruction_name)
            (operand_list
              (register)
              (number_literal)))))
      (endc_keyword)))
  (inline_comment)
  (directive
    (rept_block
      (rept_keyword)
      (number_literal)
      (directive
        (for_block
          (for_keyword)
          (variable
            (identifier))
          (number_literal)
          (number_literal)
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (variable
                  (identifier)))))
          (endr_keyword)))
      (endr_keyword)))
  (inline_comment)
  (directive
    (macro_definition
      (macro_keyword)
      (variable
        (identifier))
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (register)
            (variable
              (identifier)))))
      (directive_keyword))))

================================================================================
Blocks: Global label with uniqueness affix
================================================================================

if\@:
.local\@:
.local\@

---

(source_file
  (global_label_block
    (global_symbol
      (identifier)
      (uniqueness_affix))
    (local_label_block
      (local_symbol
        (identifier)
        (uniqueness_affix)))
    (local_label_block
      (local_symbol
        (identifier)
        (uniqueness_affix)))))

================================================================================
Blocks: macro arguments and escapes
================================================================================

MACRO USE_ARGS
    ld \1, (\2)
    db \<10>, \<-1>
if\@:
Global.local\@:
    PRINTLN Global\@
    PRINTLN Global.local\@
.loop\@:
    jr .loop\@
    PRINTLN \#
ENDM


---

(source_file
  (directive
    (macro_definition
      keyword: (macro_keyword)
      name: (variable
        (identifier))
      (instruction_list
        (instruction
          mnemonic: (instruction_name)
          (operand_list
            (macro_argument)
            (paren
              (macro_argument)))))
      (directive
        (simple_directive
          keyword: (directive_keyword)
          (argument_list
            (macro_argument)
            (macro_argument))))
      (global_label_block
        name: (global_symbol
          (identifier)
          (uniqueness_affix))
        (local_label_block
          name: (qualified_symbol
            (identifier)
            (uniqueness_affix))
          (directive
            (simple_directive
              keyword: (directive_keyword)
              (argument_list
                (variable
                  (identifier)
                  (uniqueness_affix)))))
          (directive
            (simple_directive
              keyword: (directive_keyword)
              (argument_list
                (qualified_symbol
                  (identifier)
                  (uniqueness_affix))))))
        (local_label_block
          name: (local_symbol
            (identifier)
            (uniqueness_affix))
          (instruction_list
            (instruction
              mnemonic: (instruction_name)
              (operand_list
                (local_symbol
                  (identifier)
                  (uniqueness_affix)))))
          (directive
            (simple_directive
              keyword: (directive_keyword)
              (argument_list
                (macro_arguments_spread))))))
      end: (directive_keyword))))

================================================================================
Blocks: SHIFT directive in macros and REPT
================================================================================

MACRO SHIFTING
    PRINTLN \1, \2, \3
    SHIFT
    PRINTLN \1, \2
    SHIFT -1
    PRINTLN \1
ENDM

REPT 2
    SHIFT 2
ENDR

---

(source_file
  (directive
    (macro_definition
      (macro_keyword)
      (variable
        (identifier))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (macro_argument)
            (macro_argument)
            (macro_argument))))
      (directive
        (simple_directive
          (directive_keyword)))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (macro_argument)
            (macro_argument))))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (unary_expression
              (number_literal)))))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (macro_argument))))
      (directive_keyword)))
  (directive
    (rept_block
      (rept_keyword)
      (number_literal)
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (number_literal))))
      (endr_keyword))))

================================================================================
Blocks: BREAK in FOR block
================================================================================

FOR V, 1, 100
    PRINT "{d:V}"
    IF V == 5
        PRINT " stop! "
        BREAK
    ENDC
    PRINT ", "
ENDR

---

(source_file
  (directive
    (for_block
      (for_keyword)
      (variable
        (identifier))
      (number_literal)
      (number_literal)
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (string_literal
              (identifier)))))
      (directive
        (if_block
          (if_keyword)
          (binary_expression
            (variable
              (identifier))
            (number_literal))
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (string_literal))))
          (directive
            (simple_directive
              (directive_keyword)))
          (endc_keyword)))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (string_literal))))
      (endr_keyword))))

================================================================================
Blocks: BREAK in REPT block
================================================================================

REPT 10
    db 1
    IF _NARG > 5
        BREAK
    ENDC
ENDR

---

(source_file
  (directive
    (rept_block
      (rept_keyword)
      (number_literal)
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (number_literal))))
      (directive
        (if_block
          (if_keyword)
          (binary_expression
            (constant)
            (number_literal))
          (directive
            (simple_directive
              (directive_keyword)))
          (endc_keyword)))
      (endr_keyword))))

================================================================================
Blocks: nested loops with BREAK
================================================================================

REPT 3
    FOR i, 1, 10
        IF i == 5
            BREAK
        ENDC
    ENDR
ENDR

---

(source_file
  (directive
    (rept_block
      (rept_keyword)
      (number_literal)
      (directive
        (for_block
          (for_keyword)
          (variable
            (identifier))
          (number_literal)
          (number_literal)
          (directive
            (if_block
              (if_keyword)
              (binary_expression
                (variable
                  (identifier))
                (number_literal))
              (directive
                (simple_directive
                  (directive_keyword)))
              (endc_keyword)))
          (endr_keyword)))
      (endr_keyword))))

================================================================================
Blocks: UNION / NEXTU / ENDU
================================================================================

UNION
    db 1
NEXTU
    db 2, 3
ENDU

---

(source_file
  (directive
    (union_block
      keyword: (directive_keyword)
      (directive
        (simple_directive
          keyword: (directive_keyword)
          (argument_list
            (number_literal))))
      (nextu_block
        keyword: (directive_keyword)
        (directive
          (simple_directive
            keyword: (directive_keyword)
            (argument_list
              (number_literal)
              (number_literal)))))
      end: (directive_keyword))))

================================================================================
Blocks: UNION nested inside REPT/IF
================================================================================

REPT 2
    UNION
        IF 1
            db 9
        ENDC
    NEXTU
        db 7
    ENDU
ENDR

---

(source_file
  (directive
    (rept_block
      keyword: (rept_keyword)
      count: (number_literal)
      (directive
        (union_block
          keyword: (directive_keyword)
          (directive
            (if_block
              keyword: (if_keyword)
              condition: (number_literal)
              (directive
                (simple_directive
                  keyword: (directive_keyword)
                  (argument_list
                    (number_literal))))
              end: (endc_keyword)))
          (nextu_block
            keyword: (directive_keyword)
            (directive
              (simple_directive
                keyword: (directive_keyword)
                (argument_list
                  (number_literal)))))
          end: (directive_keyword)))
      end: (endr_keyword))))

================================================================================
Blocks: LOAD / ENDL
================================================================================

SECTION "LOAD example", ROMX
LOAD "RAM code", WRAM0
  RAMLocation:
      ld hl, .string
      ld de, $9864
      jr [[ db 1 ]]
  .string
      db "Hello"
ENDL

---

(source_file
  (section_block
    (section_directive
      (section_keyword)
      (string_literal)
      (section_type))
    (load_block
      (load_keyword)
      (string_literal)
      (section_type)
      (global_label_block
        (global_symbol
          (identifier))
        (instruction_list
          (instruction
            (instruction_name)
            (operand_list
              (register)
              (local_symbol
                (identifier)))))
        (instruction_list
          (instruction
            (instruction_name)
            (operand_list
              (register)
              (number_literal))))
        (instruction_list
          (instruction
            (instruction_name)
            (operand_list
              (fragment_literal
                (directive
                  (simple_directive
                    (directive_keyword)
                    (argument_list
                      (number_literal))))))))
        (local_label_block
          (local_symbol
            (identifier))
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (string_literal))))))
      (endl_keyword))))

================================================================================
Blocks: LOAD closed by SECTION
================================================================================

LOAD "Another section", VRAM
nop
SECTION "Main", ROM0

---

(source_file
  (load_block
    (load_keyword)
    (string_literal)
    (section_type)
    (instruction_list
      (instruction
        (instruction_name)))
    (endl_keyword))
  (section_block
    (section_directive
      (section_keyword)
      (string_literal)
      (section_type))))

================================================================================
Blocks: PUSHS / POPS basic usage
================================================================================

SECTION "Code", ROM0
PUSHS "Data", ROM0
    db $FF
POPS

---

(source_file
  (section_block
    (section_directive
      (section_keyword)
      (string_literal)
      (section_type))
    (pushs_block
      (pushs_keyword)
      (string_literal)
      (section_type)
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (number_literal))))
      (pops_keyword))))

================================================================================
Blocks: PUSHS with label blocks
================================================================================

SECTION "Main", ROM0
PUSHS "Variables", WRAM0
wAnswer: db
wQuestion:
    ds 10
POPS

---

(source_file
  (section_block
    (section_directive
      (section_keyword)
      (string_literal)
      (section_type))
    (pushs_block
      (pushs_keyword)
      (string_literal)
      (section_type)
      (global_label_block
        (global_symbol
          (identifier))
        (directive
          (simple_directive
            (directive_keyword))))
      (global_label_block
        (global_symbol
          (identifier))
        (directive
          (ds_directive
            (directive_keyword)
            (number_literal))))
      (pops_keyword))))

================================================================================
Blocks: PUSHS with section attributes (BANK, ALIGN)
================================================================================

SECTION "Code", ROMX, BANK[1]
PUSHS "Graphics", ROMX[$4000], BANK[2]
    INCBIN "tiles.bin"
POPS

---

(source_file
  (section_block
    (section_directive
      (section_keyword)
      (string_literal)
      (section_type)
      (section_options
        (section_option
          (bank_option
            (bank_option_keyword)
            (number_literal)))))
    (pushs_block
      (pushs_keyword)
      (string_literal)
      (section_type)
      (section_address
        (number_literal))
      (section_options
        (section_option
          (bank_option
            (bank_option_keyword)
            (number_literal))))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (string_literal))))
      (pops_keyword))))

================================================================================
Blocks: Nested PUSHS blocks
================================================================================

SECTION "A", ROM0
PUSHS "B", ROM0
    db 1
    PUSHS "C", ROM0
        db 2
    POPS
    db 3
POPS

---

(source_file
  (section_block
    (section_directive
      (section_keyword)
      (string_literal)
      (section_type))
    (pushs_block
      (pushs_keyword)
      (string_literal)
      (section_type)
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (number_literal))))
      (pushs_block
        (pushs_keyword)
        (string_literal)
        (section_type)
        (directive
          (simple_directive
            (directive_keyword)
            (argument_list
              (number_literal))))
        (pops_keyword))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (number_literal))))
      (pops_keyword))))

================================================================================
Blocks: PUSHS outside of section (pushes no-section context)
================================================================================

PUSHS "Test", ROM0
    db 1
POPS

---

(source_file
  (pushs_block
    (pushs_keyword)
    (string_literal)
    (section_type)
    (directive
      (simple_directive
        (directive_keyword)
        (argument_list
          (number_literal))))
    (pops_keyword)))

================================================================================
Blocks: PUSHS with instructions and local labels
================================================================================

SECTION "Code", ROM0
Function:
    ld a, 42
    PUSHS "Variables", WRAM0
wAnswer: db
    POPS
    ld [wAnswer], a

---

(source_file
  (section_block
    (section_directive
      (section_keyword)
      (string_literal)
      (section_type))
    (global_label_block
      (global_symbol
        (identifier))
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (register)
            (number_literal))))
      (pushs_block
        (pushs_keyword)
        (string_literal)
        (section_type)
        (global_label_block
          (global_symbol
            (identifier))
          (directive
            (simple_directive
              (directive_keyword))))
        (pops_keyword))
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (address
              (variable
                (identifier)))
            (register)))))))

================================================================================
Blocks: PUSHS within LOAD block
================================================================================

SECTION "ROM CODE", ROM0
    ds $80
LOAD "RAM CODE", SRAM
PUSHS "HRAM", HRAM
    ds 1
POPS
ENDL

---

(source_file
  (section_block
    (section_directive
      (section_keyword)
      (string_literal)
      (section_type))
    (directive
      (ds_directive
        (directive_keyword)
        (number_literal)))
    (load_block
      (load_keyword)
      (string_literal)
      (section_type)
      (pushs_block
        (pushs_keyword)
        (string_literal)
        (section_type)
        (directive
          (ds_directive
            (directive_keyword)
            (number_literal)))
        (pops_keyword))
      (endl_keyword))))

================================================================================
Blocks: PUSHS with IF/REPT nested blocks
================================================================================

SECTION "Main", ROM0
PUSHS "Data", ROM0
    IF DEF(DEBUG)
        db "Debug data"
    ENDC
    REPT 3
        db 0
    ENDR
POPS

---

(source_file
  (section_block
    (section_directive
      (section_keyword)
      (string_literal)
      (section_type))
    (pushs_block
      (pushs_keyword)
      (string_literal)
      (section_type)
      (directive
        (if_block
          (if_keyword)
          (function_call
            (function_name)
            (variable
              (identifier)))
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (string_literal))))
          (endc_keyword)))
      (directive
        (rept_block
          (rept_keyword)
          (number_literal)
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (number_literal))))
          (endr_keyword)))
      (pops_keyword))))

================================================================================
Blocks: ENDSECTION with content
================================================================================

SECTION "Code", ROM0
    nop
ENDSECTION

---

(source_file
  (section_block
    (section_directive
      (section_keyword)
      (string_literal)
      (section_type))
    (instruction_list
      (instruction
        (instruction_name)))
    (endsection_keyword)))

==================================================================================
Blocks: ENDSECTION without content
==================================================================================

SECTION "Code", ROM0
; no instructions here
ENDSECTION
; no instructions here

---

(source_file
  (section_block
    (section_directive
      keyword: (section_keyword)
      name: (string_literal)
      (section_type))
    (inline_comment)
    end: (endsection_keyword))
  (inline_comment))

==================================================================================
Blocks: SECTION with expr as name
==================================================================================

SECTION "level" ++ LEVEL_NUM, ROM0

---

(source_file
  (section_block
    (section_directive
      (section_keyword)
      (binary_expression
        (string_literal)
        (variable
          (identifier)))
      (section_type))))
