tree-sitter-rgbasm/test/corpus/interpolation.txt
================================================================================
Interpolation: basic symbol interpolation
================================================================================

DEF name = 42
PRINTLN "Value is {name}"

---

(source_file
  (directive
    (def_directive
      (directive_keyword)
      (global_identifier
        (symbol))
      (expression
        (number_literal))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (string_literal
            (interpolation
              (symbol))))))))

================================================================================
Interpolation: nested interpolation
================================================================================

DEF topic EQUS "answer"
DEF answer = 42
PRINTLN "The {{topic}} is {answer}"

---

(source_file
  (directive
    (def_directive
      (directive_keyword)
      (global_identifier
        (symbol))
      (directive_keyword)
      (string_literal)))
  (directive
    (def_directive
      (directive_keyword)
      (global_identifier
        (symbol))
      (expression
        (number_literal))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (string_literal
            (interpolation
              (interpolation
                (symbol)))
            (interpolation
              (symbol))))))))

================================================================================
Interpolation: format specifier
================================================================================

PRINTLN "Hex {X:X} dec {d:X} bin {b:X}"

---

(source_file
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (string_literal
            (interpolation
              (format_spec)
              (symbol))
            (interpolation
              (format_spec)
              (symbol))
            (interpolation
              (format_spec)
              (symbol))))))))

================================================================================
Interpolation in names: DEF/FOR/PURGE
================================================================================

DEF prefix EQUS "ITEM"
DEF {prefix} = 1
FOR {prefix}, 1, 3
  PRINTLN "Loop"
ENDR
PURGE {prefix}

---

(source_file
  (directive
    (def_directive
      (directive_keyword)
      (global_identifier
        (symbol))
      (directive_keyword)
      (string_literal)))
  (directive
    (def_directive
      (directive_keyword)
      (global_identifier
        (interpolation
          (symbol)))
      (expression
        (number_literal))))
  (directive
    (for_block
      (directive_keyword)
      (expression
        (identifier
          (global_identifier
            (interpolation
              (symbol)))))
      (expression
        (number_literal))
      (expression
        (number_literal))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (string_literal)))))
      (directive_keyword)))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (identifier
            (global_identifier
              (interpolation
                (symbol)))))))))

================================================================================
Interpolation: raw identifier inside braces
================================================================================

PRINTLN "{#if}"

---

(source_file
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (string_literal
            (interpolation
              (raw_symbol))))))))

================================================================================
Interpolation: Nested and concatenated
================================================================================

DEF foo{bar}{d:{x}{y}_} = 0

---

(source_file
  (directive
    (def_directive
      (directive_keyword)
      (global_identifier
        (symbol)
        (interpolation
          (symbol))
        (interpolation
          (format_spec)
          (interpolation
            (symbol))
          (interpolation
            (symbol))
          (symbol)))
      (expression
        (number_literal)))))

================================================================================
Interpolation: # followed by {
================================================================================

    ld a, #{name}

---

(source_file
  (instruction_list
    (instruction
      mnemonic: (instruction_name)
      (operand_list
        (expression
          (register))
        (expression
          (identifier
            (global_identifier
              global: (interpolation
                (symbol)))))))))
